@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.205 2006/10/21 12:55:30 tlecomte Exp $
+dnl $Id: configure.in,v 1.206 2006/11/10 22:52:22 tlecomte Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -965,6 +965,9 @@ fi
 if test "${enable_wxwidgets_ok}" = yes ; then
   WX_CXXFLAGS="`$WX_CONFIG --cxxflags | sed 's/-fno-exceptions//'` $CAIROPANGO_CFLAGS"
   WX_LIBS="`$WX_CONFIG --libs` $CAIROPANGO_LIBS"
+
+  dnl Check for fork(), used for the 'persist' effect
+  AC_FUNC_FORK
 
   dnl Check for gtk (raise/lower tweaks)
   PKG_CHECK_MODULES(GTK, [gtk+-2.0], have_gtk=yes, have_gtk=no)
